--- a/war/Pgu_translate.html
+++ b/war/Pgu_translate.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link type="text/css" rel="stylesheet" href="Pgu_translate.css">
     <title>Translations</title>
-    <script type="text/javascript" language="javascript" src="pgu_translate/pgu_translate.nocache.js"></script>
+    <link type="text/css" rel="stylesheet" href="Pgu_translate.css">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <style type="text/css">
+      .fg_bigger {
+        font-size: larger;
+      }
+    </style>
   </head>
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
@@ -14,5 +20,9 @@
         in order for this application to display correctly.
       </div>
     </noscript>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" language="javascript" src="pgu_translate/pgu_translate.nocache.js"></script>
   </body>
 </html>
