--- a/war/Pgu_translate.html
+++ b/war/Pgu_translate.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Translations</title>
+    <title>Pgu's translations</title>
     <link type="text/css" rel="stylesheet" href="Pgu_translate.css">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
@@ -11,6 +11,10 @@
         font-size: larger;
       }
     </style>
+    
+    <meta name="description" content="Multiple translations of a word.">
+    <meta name="author" content="PGU">    
+    
   </head>
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
