--- a/war/Pgu_translate.html
+++ b/war/Pgu_translate.html
@@ -12,7 +12,7 @@
       }
     </style>
     
-    <meta name="description" content="Multiple translations of a word.">
+    <meta name="description" content="Returns multiple translations for a specified word.">
     <meta name="author" content="PGU">    
     
   </head>
