Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,13 +33,26 @@
       <section id="main_content" class="inner">
         <h3>Purpose</h3>
 
-<p>Multi-translations website focused on the following languages: en, fr, es, it, de, ja, cn, ko, ru, ar. </p>
+<p>Multi-translations website focused on the following languages: </p>
 
-<p>Actually, this is a simple wrapper around the google's translation service.</p>
+<ul>
+<li>English</li>
+<li>French</li>
+<li>Spanish</li>
+<li>Italian</li>
+<li>German</li>
+<li>Japanese</li>
+<li>Chinese</li>
+<li>Korean</li>
+<li>Russian</li>
+<li>Arabic</li>
+</ul><p>Actually, this is a simple wrapper around the Google's translation service.</p>
 
 <h3>Website</h3>
 
 <p><a href="http://pgu-translate.appspot.com/">Translate!</a></p>
+
+<p>Note that the style is done for use on a mobile phone.</p>
       </section>
     </div>
 
