--- a/war/Pgu_translate.html
+++ b/war/Pgu_translate.html
@@ -12,7 +12,7 @@
       }
     </style>
     
-    <meta name="description" content="Returns multiple translations for a specified word.">
+    <meta name="description" content="Returns multiple translations for a specified word: English, French, Spanish, Italian, German, Japanese, Chinese, Korean, Russian and Arabic">
     <meta name="author" content="PGU">    
     
   </head>
