--- a/war/Pgu_translate.html
+++ b/war/Pgu_translate.html
@@ -14,6 +14,8 @@
     
     <meta name="description" content="Returns multiple translations for a specified word: English, French, Spanish, Italian, German, Japanese, Chinese, Korean, Russian and Arabic">
     <meta name="author" content="PGU">    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     
   </head>
   <body>
