Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Purpose</h3>
+        <h2>Purpose</h2>
 
 <p>Multi-translations website focused on the following languages: </p>
 
@@ -48,9 +48,16 @@
 <li>Arabic</li>
 </ul><p>Actually, this is a simple wrapper around the Google's translation service.</p>
 
-<h3>Website</h3>
+<h2>Technologies</h2>
 
-<p><a href="http://pgu-translate.appspot.com/">Translate!</a></p>
+<ul>
+<li><a href="http://twitter.github.io/bootstrap/">Twitter Bootstrap</a></li>
+<li><a href="https://developers.google.com/web-toolkit/">GWT</a></li>
+<li><a href="https://developers.google.com/web-toolkit/doc/latest/DevGuideCodingBasicsJSNI">JSNI</a></li>
+<li>App Engine and its <a href="https://developers.google.com/appengine/docs/java/urlfetch/overview">URL Fetch service</a> (<i>async</i> version)</li>
+</ul><h2>Website</h2>
+
+<p><a href="http://pgu-translate.appspot.com/" title="pgu-translate"><strong>→ Translate!</strong></a></p>
 
 <p>Note that the style is done for use on a mobile phone.</p>
       </section>
@@ -64,7 +71,17 @@
       </footer>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-40453297-8");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
 
   </body>
 </html>
