Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h2>Purpose</h2>
+        <h2>Website</h2>
+
+<p><a href="http://pgu-translate.appspot.com/" title="pgu-translate"><strong>→ Translate!</strong></a></p>
+
+<h2>Purpose</h2>
 
 <p>Multi-translations website focused on the following languages: </p>
 
@@ -55,11 +59,7 @@
 <li><a href="https://developers.google.com/web-toolkit/">GWT</a></li>
 <li><a href="https://developers.google.com/web-toolkit/doc/latest/DevGuideCodingBasicsJSNI">JSNI</a></li>
 <li>App Engine and its <a href="https://developers.google.com/appengine/docs/java/urlfetch/overview">URL Fetch service</a> (<i>async</i> version)</li>
-</ul><h2>Website</h2>
-
-<p><a href="http://pgu-translate.appspot.com/" title="pgu-translate"><strong>→ Translate!</strong></a></p>
-
-<p>Note that the style is done for use on a mobile phone.</p>
+</ul><p>Note that the style is done for use on a mobile phone.</p>
       </section>
     </div>
 
